nav desktop and mobile works, but it's not perfect styled

--- a/index.html
+++ b/index.html
@@ -23,7 +23,22 @@
   <body>
     <main>
       <!-- HEADER NAV -->
-      <header></header>
+      <nav>
+        <div class="nav-wrapper">
+          <div class="logo">
+            <img src="images/logo.svg" alt="" />
+          </div>
+          <ul class="nav-links">
+            <li><a class="link-hover" href="">Home</a></li>
+            <li><a class="link-hover" href="">About</a></li>
+            <li><a class="link-hover" href="">Contact</a></li>
+            <li><a class="link-hover" href="">Blog</a></li>
+            <li><a class="link-hover" href="">Careers</a></li>
+          </ul>
+          <a class="btn-nav" href="">Request Invite</a>
+          <span class="icon-menu" id="icon-menu"></span>
+        </div>
+      </nav>
       <!-- HERO CONTENT -->
       <div class="hero-wrapper"></div>
 
