--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <main>
+      <div class="mobile-menu-shadow"></div>
       <!-- HEADER NAV -->
       <nav>
         <div class="nav-wrapper">
@@ -40,7 +41,22 @@
         </div>
       </nav>
       <!-- HERO CONTENT -->
-      <div class="hero-wrapper"></div>
+      <div class="hero-container">
+        <div class="hero-wrapper">
+          <div class="hero-info">
+            <h1>Next generation digital banking</h1>
+            <p class="paragraph">
+              Take your financial life online. Your Easybank account will be a
+              one-stop-shop for spending, saving, budgeting, investing, and much
+              more.
+            </p>
+            <a class="btn-nav" href="">Request Invite</a>
+          </div>
+          <div class="hero-img">
+            <img src="images/image-mockups.png" alt="" />
+          </div>
+        </div>
+      </div>
 
       <!-- CONTENT WRAPPER -->
       <div class="content-wrapper">
